@@ -1,10 +1,9 @@
 package elucent.rootsclassic.util;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
 import elucent.rootsclassic.Const;
 import net.minecraft.core.BlockPos;
+import net.minecraft.util.FastColor;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
@@ -12,6 +11,10 @@ import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.phys.AABB;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Random;
 
 public class RootsUtil {
 
@@ -66,8 +69,8 @@ public class RootsUtil {
       z += livingEntity.getLookAngle().z * 0.1;
       List<Entity> entities = levelAccessor.getEntitiesOfClass(Entity.class, new AABB(x - 0.1, y - 0.1, z - 0.1, x + 0.1, y + 0.1, z + 0.1));
       if (entities.size() > 0) {
-        if (entities.get(0).getUUID() != livingEntity.getUUID()) {
-          return entities.get(0);
+        if (entities.getFirst().getUUID() != livingEntity.getUUID()) {
+          return entities.getFirst();
         }
       }
     }
@@ -83,4 +86,29 @@ public class RootsUtil {
       return match.isPresent();
     });
   }
+
+	public static void randomlyRepair(RandomSource rnd, ItemStack stack) {
+		if (stack.isDamaged() && rnd.nextInt(80) == 0) {
+			stack.setDamageValue(stack.getDamageValue() - 1);
+		}
+	}
+
+	public static int intColor(int r, int g, int b) {
+		return FastColor.ARGB32.color(r, g, b);
+	}
+
+	public static int intColorFromHexString(String hex) {
+		if (hex.isEmpty()) return 0;
+
+		//Remove hashtag if present
+		if (hex.charAt(0) == '#') hex = hex.substring(1);
+		//Check if right size
+		if (hex.length() != 6) return 0;
+
+		return FastColor.ARGB32.color(
+			Integer.parseInt(hex.substring(0, 2), 16),
+			Integer.parseInt(hex.substring(2, 4), 16),
+			Integer.parseInt(hex.substring(4, 6), 16)
+		);
+	}
 }
